clusters/cosmos/apps/snappit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: snappit-ingress
spec:
 tls:
 - hosts:
   - snappit.cosmos.cboxlab.com
   secretName: snappit-tls-secret
 rules:
 - host: snappit.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: snappit
           port:
             number: 80
       path: /
       pathType: Prefix
